--- a/HW1/ML HW1.ipynb
+++ b/HW1/ML HW1.ipynb
@@ -172,7 +172,7 @@
     "                                        1, self._X)\n",
     "        X_candidates = np.argsort(distances)[:self._k]\n",
     "        y_candidates = self._y[X_candidates]\n",
-    "        return np.argmax(np.bincount(y_candidates))\n",
+    "        return np.argmax(np.bincount(y_candidates.astype('int64')))\n",
     "    \n",
     "    def score(self, X, y_true):\n",
     "        return accuracy_score(y_true, self.predict(X))\n",
@@ -451,6 +451,18 @@
   },
   "nteract": {
    "version": "0.8.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
