--- a/HW2/hw2.ipynb
+++ b/HW2/hw2.ipynb
@@ -9,15 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.321571Z",
-     "start_time": "2018-04-09T19:43:09.318563Z"
+     "end_time": "2018-04-10T02:08:05.067048Z",
+     "start_time": "2018-04-10T02:08:04.567515Z"
     }
    },
    "outputs": [],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.datasets import load_iris\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.341624Z",
-     "start_time": "2018-04-09T19:43:09.322573Z"
+     "end_time": "2018-04-10T02:08:05.099134Z",
+     "start_time": "2018-04-10T02:08:05.067048Z"
     }
    },
    "outputs": [
@@ -125,7 +126,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 456,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.382232Z",
-     "start_time": "2018-04-09T19:43:09.343215Z"
+     "end_time": "2018-04-10T02:08:05.138238Z",
+     "start_time": "2018-04-10T02:08:05.100137Z"
     }
    },
    "outputs": [
@@ -190,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "'condition number:20.290018691247358'"
+       "'condition number:25.37391756632881'"
       ]
      },
      "metadata": {},
@@ -285,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "'condition number:20.290018691247358'"
+       "'condition number:49.83204972740381'"
       ]
      },
      "metadata": {},
@@ -471,6 +472,7 @@
     "    cov = [(targetx[f1]*targetx[f2]).mean() \n",
     "           for f1, f2 in itertools.product(feature_names, feature_names)]\n",
     "    cov = np.array(cov).reshape((len(feature_names), len(feature_names)))\n",
+    "    eigvals, _ = np.linalg.eig(cov)\n",
     "    display('class %d'%(tx), 'condition number:{}'.format(abs(eigvals.max()/eigvals.min())))\n",
     "    display(pd.DataFrame(data=cov, columns=feature_names, index=feature_names))"
    ]
@@ -485,11 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.387747Z",
-     "start_time": "2018-04-09T19:43:09.383235Z"
+     "end_time": "2018-04-10T02:08:05.145257Z",
+     "start_time": "2018-04-10T02:08:05.139241Z"
     }
    },
    "outputs": [],
@@ -505,11 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.393261Z",
-     "start_time": "2018-04-09T19:43:09.388749Z"
+     "end_time": "2018-04-10T02:08:05.151273Z",
+     "start_time": "2018-04-10T02:08:05.146260Z"
     }
    },
    "outputs": [],
@@ -519,11 +521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.399779Z",
-     "start_time": "2018-04-09T19:43:09.394265Z"
+     "end_time": "2018-04-10T02:08:05.158291Z",
+     "start_time": "2018-04-10T02:08:05.152275Z"
     }
    },
    "outputs": [],
@@ -534,11 +536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.405795Z",
-     "start_time": "2018-04-09T19:43:09.400782Z"
+     "end_time": "2018-04-10T02:08:05.164307Z",
+     "start_time": "2018-04-10T02:08:05.159294Z"
     }
    },
    "outputs": [],
@@ -554,11 +556,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.411811Z",
-     "start_time": "2018-04-09T19:43:09.406798Z"
+     "end_time": "2018-04-10T02:08:05.170323Z",
+     "start_time": "2018-04-10T02:08:05.165311Z"
     },
     "scrolled": false
    },
@@ -569,11 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.435875Z",
-     "start_time": "2018-04-09T19:43:09.412813Z"
+     "end_time": "2018-04-10T02:08:05.195389Z",
+     "start_time": "2018-04-10T02:08:05.171327Z"
     }
    },
    "outputs": [],
@@ -614,11 +616,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.760237Z",
-     "start_time": "2018-04-09T19:43:09.436878Z"
+     "end_time": "2018-04-10T02:08:05.519252Z",
+     "start_time": "2018-04-10T02:08:05.196392Z"
     }
    },
    "outputs": [
@@ -626,8 +628,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9622222222222222\n",
-      "variance of acc:0.00010370370370370297\n"
+      "average acc:0.9666666666666666\n",
+      "variance of acc:0.00032098765432098683\n"
      ]
     }
    ],
@@ -655,11 +657,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:52:11.624049Z",
-     "start_time": "2018-04-09T19:52:11.595474Z"
+     "end_time": "2018-04-10T02:08:05.523262Z",
+     "start_time": "2018-04-10T02:08:05.520254Z"
     }
    },
    "outputs": [],
@@ -682,36 +684,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T20:06:24.553773Z",
-     "start_time": "2018-04-09T20:06:24.550766Z"
+     "end_time": "2018-04-10T02:08:05.529278Z",
+     "start_time": "2018-04-10T02:08:05.524265Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 4)"
-      ]
-     },
-     "execution_count": 480,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#np.cov(iris.as_matrix()[:, :-1], rowvar=False).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T20:16:54.735468Z",
-     "start_time": "2018-04-09T20:16:54.397569Z"
+     "end_time": "2018-04-10T02:20:13.526784Z",
+     "start_time": "2018-04-10T02:20:13.198654Z"
     }
    },
    "outputs": [
@@ -719,8 +710,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.74\n",
-      "variance of acc:0.002869135802469135\n"
+      "average acc:0.9577777777777777\n",
+      "variance of acc:0.0009333333333333334\n"
      ]
     }
    ],
@@ -733,11 +724,12 @@
     "    cov = np.cov(train_X, rowvar=False)\n",
     "    eigvalue, eigvertor= np.linalg.eig(cov)\n",
     "    \n",
-    "    V = eigvertor.dot(np.diag(eigvalue)**0.5)\n",
+    "    V = (eigvertor[:, :2]).dot(np.diag(eigvalue[:2])**0.5)\n",
     "    Vbar = np.linalg.inv(V.T.dot(V)).dot(V.T)\n",
-    "    \n",
-    "    train_X = train_X.dot(Vbar[:, :2])\n",
-    "    test_X = test_X.dot(Vbar[:, :2])\n",
+    "    #display(V, Vbar)\n",
+    "    #break\n",
+    "    train_X = train_X.dot(Vbar.T)\n",
+    "    test_X = test_X.dot(Vbar.T)\n",
     "    \n",
     "    model = MyKNeighborsClassifier()\n",
     "    model.fit(train_X, train_y)\n",
@@ -756,11 +748,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.811875Z",
-     "start_time": "2018-04-09T19:43:09.789315Z"
+     "end_time": "2018-04-10T02:08:05.887229Z",
+     "start_time": "2018-04-10T02:08:05.866174Z"
     }
    },
    "outputs": [],
@@ -792,42 +784,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.820397Z",
-     "start_time": "2018-04-09T19:43:09.812878Z"
+     "end_time": "2018-04-10T02:08:05.899262Z",
+     "start_time": "2018-04-10T02:08:05.888233Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.20490976+0.j, -0.00898234+0.j],\n",
-       "       [ 0.38714331+0.j, -0.58899857+0.j],\n",
-       "       [-0.54648218+0.j,  0.25428655+0.j],\n",
-       "       [-0.71378517+0.j, -0.76703217+0.j]])"
+       "array([ 3.22719578e+01,  2.77566864e-01, -2.17066869e-15, -2.17066869e-15])"
       ]
      },
-     "execution_count": 468,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.20490976, -0.00898234,  0.26284129,  0.26284129],\n",
+       "       [ 0.38714331, -0.58899857, -0.36351406, -0.36351406],\n",
+       "       [-0.54648218,  0.25428655, -0.41271318, -0.41271318],\n",
+       "       [-0.71378517, -0.76703217,  0.62287111,  0.62287111]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "data = iris.as_matrix()\n",
     "lda_eigvalue, lda_eignvector = lda(data)\n",
     "X, y = data[:, :-1].dot(lda_eignvector[:, :2]), data[:, -1]\n",
-    "lda_eignvector[:, :2]"
+    "display(lda_eigvalue.real, lda_eignvector.real)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.825912Z",
-     "start_time": "2018-04-09T19:43:09.821400Z"
+     "end_time": "2018-04-10T02:08:05.902271Z",
+     "start_time": "2018-04-10T02:08:05.900265Z"
     }
    },
    "outputs": [],
@@ -842,11 +842,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:09.832931Z",
-     "start_time": "2018-04-09T19:43:09.826915Z"
+     "end_time": "2018-04-10T02:08:05.909289Z",
+     "start_time": "2018-04-10T02:08:05.903273Z"
     }
    },
    "outputs": [
@@ -864,11 +864,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-09T19:43:10.178851Z",
-     "start_time": "2018-04-09T19:43:09.833934Z"
+     "end_time": "2018-04-10T02:08:06.238165Z",
+     "start_time": "2018-04-10T02:08:05.910291Z"
     }
    },
    "outputs": [
@@ -876,8 +876,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.968888888888889\n",
-      "variance of acc:0.00041481481481481404\n"
+      "average acc:0.9577777777777777\n",
+      "variance of acc:0.0005382716049382709\n"
      ]
     }
    ],
