--- a/HW2/hw2.ipynb
+++ b/HW2/hw2.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.067048Z",
-     "start_time": "2018-04-10T02:08:04.567515Z"
+     "end_time": "2018-04-10T02:35:04.976529Z",
+     "start_time": "2018-04-10T02:35:04.448664Z"
     }
    },
    "outputs": [],
@@ -29,11 +29,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.099134Z",
-     "start_time": "2018-04-10T02:08:05.067048Z"
+     "end_time": "2018-04-10T02:35:04.999591Z",
+     "start_time": "2018-04-10T02:35:04.977533Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class MyKNeighborsClassifier:\n",
+    "    \n",
+    "    def __init__(self, n_neighbors=3, **kwargs):\n",
+    "        self._k = n_neighbors\n",
+    "        self._X = self._y = None\n",
+    "        self.set_params(**kwargs)\n",
+    "            \n",
+    "    def get_params(self, deep=True):\n",
+    "        # suppose this estimator has parameters \"alpha\" and \"recursive\"\n",
+    "        return self.__dict__\n",
+    "\n",
+    "    def set_params(self, **parameters):\n",
+    "        for parameter, value in parameters.items():\n",
+    "            setattr(self, parameter, value)\n",
+    "        return self\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self._X = X\n",
+    "        self._y = y\n",
+    "    \n",
+    "    def _predict(self, x):\n",
+    "        distances = np.apply_along_axis(lambda x1: np.linalg.norm(x-x1), \n",
+    "                                        1, self._X)\n",
+    "        X_candidates = np.argsort(distances)[:self._k]\n",
+    "        y_candidates = self._y[X_candidates]\n",
+    "        return np.argmax(np.bincount(y_candidates.astype('int64')))\n",
+    "    \n",
+    "    def score(self, X, y_true):\n",
+    "        return accuracy_score(y_true, self.predict(X))\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        return np.apply_along_axis(lambda x: self._predict(x), 1, X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-10T02:35:05.016637Z",
+     "start_time": "2018-04-10T02:35:05.000594Z"
     }
    },
    "outputs": [
@@ -126,7 +171,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.138238Z",
-     "start_time": "2018-04-10T02:08:05.100137Z"
+     "end_time": "2018-04-10T02:35:05.055742Z",
+     "start_time": "2018-04-10T02:35:05.017640Z"
     }
    },
    "outputs": [
@@ -487,11 +532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.145257Z",
-     "start_time": "2018-04-10T02:08:05.139241Z"
+     "end_time": "2018-04-10T02:35:05.060754Z",
+     "start_time": "2018-04-10T02:35:05.056744Z"
     }
    },
    "outputs": [],
@@ -507,11 +552,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.151273Z",
-     "start_time": "2018-04-10T02:08:05.146260Z"
+     "end_time": "2018-04-10T02:35:05.067773Z",
+     "start_time": "2018-04-10T02:35:05.061757Z"
     }
    },
    "outputs": [],
@@ -521,11 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.158291Z",
-     "start_time": "2018-04-10T02:08:05.152275Z"
+     "end_time": "2018-04-10T02:35:05.073788Z",
+     "start_time": "2018-04-10T02:35:05.068776Z"
     }
    },
    "outputs": [],
@@ -536,11 +581,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.164307Z",
-     "start_time": "2018-04-10T02:08:05.159294Z"
+     "end_time": "2018-04-10T02:35:05.079806Z",
+     "start_time": "2018-04-10T02:35:05.074791Z"
     }
    },
    "outputs": [],
@@ -556,11 +601,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.170323Z",
-     "start_time": "2018-04-10T02:08:05.165311Z"
+     "end_time": "2018-04-10T02:35:05.086823Z",
+     "start_time": "2018-04-10T02:35:05.080809Z"
     },
     "scrolled": false
    },
@@ -571,56 +616,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.195389Z",
-     "start_time": "2018-04-10T02:08:05.171327Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class MyKNeighborsClassifier:\n",
-    "    \n",
-    "    def __init__(self, n_neighbors=3, **kwargs):\n",
-    "        self._k = n_neighbors\n",
-    "        self._X = self._y = None\n",
-    "        self.set_params(**kwargs)\n",
-    "            \n",
-    "    def get_params(self, deep=True):\n",
-    "        # suppose this estimator has parameters \"alpha\" and \"recursive\"\n",
-    "        return self.__dict__\n",
-    "\n",
-    "    def set_params(self, **parameters):\n",
-    "        for parameter, value in parameters.items():\n",
-    "            setattr(self, parameter, value)\n",
-    "        return self\n",
-    "    \n",
-    "    def fit(self, X, y):\n",
-    "        self._X = X\n",
-    "        self._y = y\n",
-    "    \n",
-    "    def _predict(self, x):\n",
-    "        distances = np.apply_along_axis(lambda x1: np.linalg.norm(x-x1), \n",
-    "                                        1, self._X)\n",
-    "        X_candidates = np.argsort(distances)[:self._k]\n",
-    "        y_candidates = self._y[X_candidates]\n",
-    "        return np.argmax(np.bincount(y_candidates.astype('int64')))\n",
-    "    \n",
-    "    def score(self, X, y_true):\n",
-    "        return accuracy_score(y_true, self.predict(X))\n",
-    "    \n",
-    "    def predict(self, X):\n",
-    "        return np.apply_along_axis(lambda x: self._predict(x), 1, X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.519252Z",
-     "start_time": "2018-04-10T02:08:05.196392Z"
+     "end_time": "2018-04-10T02:35:05.423719Z",
+     "start_time": "2018-04-10T02:35:05.087826Z"
     }
    },
    "outputs": [
@@ -628,8 +628,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9666666666666666\n",
-      "variance of acc:0.00032098765432098683\n"
+      "average acc:0.9644444444444444\n",
+      "variance of acc:0.0006123456790123452\n"
      ]
     }
    ],
@@ -657,11 +657,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.523262Z",
-     "start_time": "2018-04-10T02:08:05.520254Z"
+     "end_time": "2018-04-10T02:35:05.427730Z",
+     "start_time": "2018-04-10T02:35:05.424723Z"
     }
    },
    "outputs": [],
@@ -684,11 +684,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.529278Z",
-     "start_time": "2018-04-10T02:08:05.524265Z"
+     "end_time": "2018-04-10T02:35:05.433746Z",
+     "start_time": "2018-04-10T02:35:05.428733Z"
     }
    },
    "outputs": [],
@@ -698,20 +698,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:20:13.526784Z",
-     "start_time": "2018-04-10T02:20:13.198654Z"
-    }
+     "end_time": "2018-04-10T02:36:34.253967Z",
+     "start_time": "2018-04-10T02:36:33.910626Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9577777777777777\n",
-      "variance of acc:0.0009333333333333334\n"
+      "average acc:0.9644444444444444\n",
+      "variance of acc:0.000612345679012345\n"
      ]
     }
    ],
@@ -730,7 +731,6 @@
     "    #break\n",
     "    train_X = train_X.dot(Vbar.T)\n",
     "    test_X = test_X.dot(Vbar.T)\n",
-    "    \n",
     "    model = MyKNeighborsClassifier()\n",
     "    model.fit(train_X, train_y)\n",
     "    acc.append(model.score(test_X, test_y))\n",
