--- a/HW2/ml_hw2.ipynb
+++ b/HW2/ml_hw2.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:04.976529Z",
-     "start_time": "2018-04-10T02:35:04.448664Z"
+     "end_time": "2018-04-10T04:57:07.330151Z",
+     "start_time": "2018-04-10T04:57:06.554729Z"
     }
    },
    "outputs": [],
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:04.999591Z",
-     "start_time": "2018-04-10T02:35:04.977533Z"
+     "end_time": "2018-04-10T04:57:07.338179Z",
+     "start_time": "2018-04-10T04:57:07.332128Z"
     }
    },
    "outputs": [],
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.016637Z",
-     "start_time": "2018-04-10T02:35:05.000594Z"
+     "end_time": "2018-04-10T04:57:07.367578Z",
+     "start_time": "2018-04-10T04:57:07.341429Z"
     }
    },
    "outputs": [
@@ -171,7 +171,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.055742Z",
-     "start_time": "2018-04-10T02:35:05.017640Z"
+     "end_time": "2018-04-10T04:57:07.437097Z",
+     "start_time": "2018-04-10T04:57:07.371126Z"
     }
    },
    "outputs": [
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "'condition number:25.37391756632881'"
+       "'condition number:25.373917566328807'"
       ]
      },
      "metadata": {},
@@ -426,7 +426,7 @@
     {
      "data": {
       "text/plain": [
-       "'condition number:20.290018691247358'"
+       "'condition number:20.290018691247365'"
       ]
      },
      "metadata": {},
@@ -515,11 +515,17 @@
     "    targetx = iris.loc[iris.target == tx, feature_names]\n",
     "    targetx = targetx.apply(lambda x: x-x.mean())\n",
     "    cov = [(targetx[f1]*targetx[f2]).mean() \n",
-    "           for f1, f2 in itertools.product(feature_names, feature_names)]\n",
-    "    cov = np.array(cov).reshape((len(feature_names), len(feature_names)))\n",
+    "           for f1, f2 in itertools.product(feature_names, \n",
+    "                                           feature_names)]\n",
+    "    cov = np.array(cov).reshape((len(feature_names), \n",
+    "                                 len(feature_names)))\n",
     "    eigvals, _ = np.linalg.eig(cov)\n",
-    "    display('class %d'%(tx), 'condition number:{}'.format(abs(eigvals.max()/eigvals.min())))\n",
-    "    display(pd.DataFrame(data=cov, columns=feature_names, index=feature_names))"
+    "    display('class %d'%(tx), \n",
+    "            'condition number:{}'.format(abs(eigvals.max() / \n",
+    "                                             eigvals.min())))\n",
+    "    display(pd.DataFrame(data=cov, \n",
+    "                         columns=feature_names, \n",
+    "                         index=feature_names))"
    ]
   },
   {
@@ -532,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.060754Z",
-     "start_time": "2018-04-10T02:35:05.056744Z"
+     "end_time": "2018-04-10T04:57:07.442935Z",
+     "start_time": "2018-04-10T04:57:07.439119Z"
     }
    },
    "outputs": [],
@@ -552,16 +558,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.067773Z",
-     "start_time": "2018-04-10T02:35:05.061757Z"
+     "end_time": "2018-04-10T04:57:07.451283Z",
+     "start_time": "2018-04-10T04:57:07.445230Z"
     }
    },
    "outputs": [],
    "source": [
-    "#train, test = randomly_draw(iris)"
+    "def pca(train_X, test_X):\n",
+    "    cov = train_X.T.dot(train_X)\n",
+    "    eigvalue, loading = np.linalg.eig(cov)\n",
+    "    # display(eigvalue, loading)\n",
+    "    new_train_X, new_test_X = (train_X.dot(loading[:, :2]), \n",
+    "                               test_X.dot(loading[:, :2]))\n",
+    "    return new_train_X, new_test_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-10T04:57:07.459036Z",
+     "start_time": "2018-04-10T04:57:07.456045Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# train, test = randomly_draw(iris)"
    ]
   },
   {
@@ -569,8 +595,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.073788Z",
-     "start_time": "2018-04-10T02:35:05.068776Z"
+     "end_time": "2018-04-10T04:57:07.464321Z",
+     "start_time": "2018-04-10T04:57:07.461220Z"
     }
    },
    "outputs": [],
@@ -584,28 +610,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.079806Z",
-     "start_time": "2018-04-10T02:35:05.074791Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def pca(train_X, test_X):\n",
-    "    cov = np.dot(train_X.T, train_X)\n",
-    "    eigvalue, loading = np.linalg.eig(cov)\n",
-    "    # display(eigvalue, loading)\n",
-    "    new_train_X = np.dot(train_X, loading[:, :2])\n",
-    "    new_test_X = np.dot(test_X, loading[:, :2])\n",
-    "    return new_train_X, new_test_X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.086823Z",
-     "start_time": "2018-04-10T02:35:05.080809Z"
+     "end_time": "2018-04-10T04:57:07.468889Z",
+     "start_time": "2018-04-10T04:57:07.466403Z"
     },
     "scrolled": false
    },
@@ -616,11 +622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.423719Z",
-     "start_time": "2018-04-10T02:35:05.087826Z"
+     "end_time": "2018-04-10T04:57:07.962156Z",
+     "start_time": "2018-04-10T04:57:07.471753Z"
     }
    },
    "outputs": [
@@ -628,8 +634,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9644444444444444\n",
-      "variance of acc:0.0006123456790123452\n"
+      "average acc:0.9666666666666666\n",
+      "variance of acc:0.0002222222222222214\n"
      ]
     }
    ],
@@ -652,57 +658,16 @@
    "metadata": {},
    "source": [
     "## 4\n",
-    "Following the general steps of problem 2, but use the FA approach for dimensionality reduction. For simplicity, you may assume  = 0 and use the LS solutions."
+    "Following the general steps of problem 3, but use the FA approach for dimensionality reduction. For simplicity, you may assume  = 0 and use the LS solutions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.427730Z",
-     "start_time": "2018-04-10T02:35:05.424723Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# for tx in range(3): \n",
-    "#     targetx = iris.loc[iris.target == tx, feature_names]\n",
-    "#     targetx = targetx.apply(lambda x: x-x.mean())\n",
-    "#     cov = [(targetx[f1]*targetx[f2]).mean() \n",
-    "#            for f1, f2 in itertools.product(feature_names, feature_names)]\n",
-    "#     cov = np.array(cov).reshape((len(feature_names), len(feature_names)))\n",
-    "#     eigvalue, eigvertor= np.linalg.eig(cov)\n",
-    "#     V = eigvertor.dot(np.diag(eigvalue)**0.5)\n",
-    "#     Vbar = np.linalg.inv(V.T.dot(V)).dot(V.T)\n",
-    "    \n",
-    "#     X = iris.loc[iris.target == tx, feature_names]\n",
-    "#     t = X.dot(Vbar[:, :2])\n",
-    "#     # display('class %d'%(tx), 'condition number:{}'.format(abs(eigvals.max()/eigvals.min())))\n",
-    "#     # display(pd.DataFrame(data=cov, columns=feature_names, index=feature_names))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-10T02:35:05.433746Z",
-     "start_time": "2018-04-10T02:35:05.428733Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#np.cov(iris.as_matrix()[:, :-1], rowvar=False).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-10T02:36:34.253967Z",
-     "start_time": "2018-04-10T02:36:33.910626Z"
+     "end_time": "2018-04-10T04:57:14.746572Z",
+     "start_time": "2018-04-10T04:57:14.258461Z"
     },
     "scrolled": false
    },
@@ -711,8 +676,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9644444444444444\n",
-      "variance of acc:0.000612345679012345\n"
+      "average acc:0.9622222222222222\n",
+      "variance of acc:0.0006962962962962956\n"
      ]
     }
    ],
@@ -722,6 +687,7 @@
     "    train, test = randomly_draw(iris)\n",
     "    train_X,  train_y = train[:, :-1], train[:, -1]\n",
     "    test_X, test_y = test[:, :-1], test[:, -1]\n",
+    "    \n",
     "    cov = np.cov(train_X, rowvar=False)\n",
     "    eigvalue, eigvertor= np.linalg.eig(cov)\n",
     "    \n",
@@ -743,16 +709,16 @@
    "metadata": {},
    "source": [
     "## 5\n",
-    "Repeat problem 2 by using LDA as the reduction method. Remember to compute the parameters for each class in order to use LDA."
+    "Repeat problem 3 by using LDA as the reduction method. Remember to compute the parameters for each class in order to use LDA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.887229Z",
-     "start_time": "2018-04-10T02:08:05.866174Z"
+     "end_time": "2018-04-10T04:57:08.479201Z",
+     "start_time": "2018-04-10T04:57:08.472349Z"
     }
    },
    "outputs": [],
@@ -777,25 +743,26 @@
     "        Sb += n*(mi-m).dot((mi-m).T)\n",
     "\n",
     "    #display(Sw, Sb)\n",
-    "    lda_eigvalue, lda_eignvector = np.linalg.eig(np.linalg.inv(Sw).dot(Sb))\n",
+    "    lda_eigvalue, lda_eignvector = np.linalg.eig(\n",
+    "                                    np.linalg.inv(Sw).dot(Sb))\n",
     "    #display(lda_eigvalue.real, lda_eignvector.real)\n",
     "    return lda_eigvalue, lda_eignvector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.899262Z",
-     "start_time": "2018-04-10T02:08:05.888233Z"
+     "end_time": "2018-04-10T04:57:08.491104Z",
+     "start_time": "2018-04-10T04:57:08.481747Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.22719578e+01,  2.77566864e-01, -2.17066869e-15, -2.17066869e-15])"
+       "array([ 3.22719578e+01,  2.77566864e-01, -6.73276390e-16, -6.73276390e-16])"
       ]
      },
      "metadata": {},
@@ -804,10 +771,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.20490976, -0.00898234,  0.26284129,  0.26284129],\n",
-       "       [ 0.38714331, -0.58899857, -0.36351406, -0.36351406],\n",
-       "       [-0.54648218,  0.25428655, -0.41271318, -0.41271318],\n",
-       "       [-0.71378517, -0.76703217,  0.62287111,  0.62287111]])"
+       "array([[-0.20490976,  0.00898234,  0.27709585,  0.27709585],\n",
+       "       [-0.38714331,  0.58899857, -0.386313  , -0.386313  ],\n",
+       "       [ 0.54648218, -0.25428655, -0.438815  , -0.438815  ],\n",
+       "       [ 0.71378517,  0.76703217,  0.66441477,  0.66441477]])"
       ]
      },
      "metadata": {},
@@ -823,11 +790,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.902271Z",
-     "start_time": "2018-04-10T02:08:05.900265Z"
+     "end_time": "2018-04-10T04:57:08.497061Z",
+     "start_time": "2018-04-10T04:57:08.493416Z"
     }
    },
    "outputs": [],
@@ -842,11 +809,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:05.909289Z",
-     "start_time": "2018-04-10T02:08:05.903273Z"
+     "end_time": "2018-04-10T04:57:09.042421Z",
+     "start_time": "2018-04-10T04:57:08.499709Z"
     }
    },
    "outputs": [
@@ -854,30 +821,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "condition number:1.4867288563028926e+16\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('condition number:{}'.format(abs(lda_eigvalue.real.max() / lda_eigvalue.real.min())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-10T02:08:06.238165Z",
-     "start_time": "2018-04-10T02:08:05.910291Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "average acc:0.9577777777777777\n",
-      "variance of acc:0.0005382716049382709\n"
+      "average acc:0.9733333333333334\n",
+      "variance of acc:0.00017777777777777708\n"
      ]
     }
    ],
@@ -887,22 +832,18 @@
     "    train, test = randomly_draw(iris)\n",
     "    \n",
     "    lda_eigvalue, lda_eignvector = lda(train)\n",
-    "    train_X, train_y = train[:, :-1].dot(lda_eignvector[:, :2]), train[:, -1]\n",
-    "    test_X, test_y = test[:, :-1].dot(lda_eignvector[:, :2]), test[:, -1]\n",
+    "    train_X, train_y = (train[:, :-1].dot(lda_eignvector[:, :2]), \n",
+    "                        train[:, -1])\n",
+    "    test_X, test_y = (test[:, :-1].dot(lda_eignvector[:, :2]), \n",
+    "                      test[:, -1])\n",
     "    \n",
     "    model = MyKNeighborsClassifier()\n",
     "    model.fit(train_X, train_y)\n",
     "    acc.append(model.score(test_X, test_y))\n",
+    "\n",
     "print('average acc:{}'.format(np.mean(acc)))\n",
     "print('variance of acc:{}'.format(np.var(acc)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -921,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "nav_menu": {},
@@ -939,6 +880,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
