--- a/HW2/ml_hw2.ipynb
+++ b/HW2/ml_hw2.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.330151Z",
-     "start_time": "2018-04-10T04:57:06.554729Z"
+     "end_time": "2018-05-01T03:43:47.695309Z",
+     "start_time": "2018-05-01T03:43:46.912438Z"
     }
    },
    "outputs": [],
@@ -32,8 +32,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.338179Z",
-     "start_time": "2018-04-10T04:57:07.332128Z"
+     "end_time": "2018-05-01T03:43:47.703629Z",
+     "start_time": "2018-05-01T03:43:47.697574Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.367578Z",
-     "start_time": "2018-04-10T04:57:07.341429Z"
+     "end_time": "2018-05-01T03:43:47.730534Z",
+     "start_time": "2018-05-01T03:43:47.706118Z"
     }
    },
    "outputs": [
@@ -219,8 +219,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.437097Z",
-     "start_time": "2018-04-10T04:57:07.371126Z"
+     "end_time": "2018-05-01T03:43:47.797225Z",
+     "start_time": "2018-05-01T03:43:47.732742Z"
     }
    },
    "outputs": [
@@ -541,8 +541,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.442935Z",
-     "start_time": "2018-04-10T04:57:07.439119Z"
+     "end_time": "2018-05-01T03:43:47.803650Z",
+     "start_time": "2018-05-01T03:43:47.799534Z"
     }
    },
    "outputs": [],
@@ -561,19 +561,15 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.451283Z",
-     "start_time": "2018-04-10T04:57:07.445230Z"
+     "end_time": "2018-05-01T03:43:47.809737Z",
+     "start_time": "2018-05-01T03:43:47.806417Z"
     }
    },
    "outputs": [],
    "source": [
-    "def pca(train_X, test_X):\n",
-    "    cov = train_X.T.dot(train_X)\n",
-    "    eigvalue, loading = np.linalg.eig(cov)\n",
-    "    # display(eigvalue, loading)\n",
-    "    new_train_X, new_test_X = (train_X.dot(loading[:, :2]), \n",
-    "                               test_X.dot(loading[:, :2]))\n",
-    "    return new_train_X, new_test_X"
+    "def sort_eig(eigvals, eigvertor):\n",
+    "    sort_mask = np.argsort(np.abs(eigvals))[::-1]\n",
+    "    return eigvals[sort_mask], eigvertor[:, sort_mask]"
    ]
   },
   {
@@ -581,8 +577,30 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.459036Z",
-     "start_time": "2018-04-10T04:57:07.456045Z"
+     "end_time": "2018-05-01T03:43:47.822239Z",
+     "start_time": "2018-05-01T03:43:47.812348Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def pca(train_X, test_X):\n",
+    "    cov = train_X.T.dot(train_X)\n",
+    "    eigvalue, loading = np.linalg.eig(cov)\n",
+    "    eigvalue, loading = sort_eig(eigvalue, loading)\n",
+    "    # display(eigvalue, loading)\n",
+    "    \n",
+    "    new_train_X, new_test_X = (train_X.dot(loading[:, :2]), \n",
+    "                               test_X.dot(loading[:, :2]))\n",
+    "    return new_train_X, new_test_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-01T03:43:47.831535Z",
+     "start_time": "2018-05-01T03:43:47.824401Z"
     }
    },
    "outputs": [],
@@ -592,11 +610,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.464321Z",
-     "start_time": "2018-04-10T04:57:07.461220Z"
+     "end_time": "2018-05-01T03:43:47.836814Z",
+     "start_time": "2018-05-01T03:43:47.834053Z"
     }
    },
    "outputs": [],
@@ -607,11 +625,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.468889Z",
-     "start_time": "2018-04-10T04:57:07.466403Z"
+     "end_time": "2018-05-01T03:43:47.841801Z",
+     "start_time": "2018-05-01T03:43:47.839261Z"
     },
     "scrolled": false
    },
@@ -622,11 +640,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:07.962156Z",
-     "start_time": "2018-04-10T04:57:07.471753Z"
+     "end_time": "2018-05-01T03:43:48.337102Z",
+     "start_time": "2018-05-01T03:43:47.844245Z"
     }
    },
    "outputs": [
@@ -634,8 +652,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9666666666666666\n",
-      "variance of acc:0.0002222222222222214\n"
+      "average acc:0.968888888888889\n",
+      "variance of acc:0.00041481481481481404\n"
      ]
     }
    ],
@@ -663,11 +681,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:14.746572Z",
-     "start_time": "2018-04-10T04:57:14.258461Z"
+     "end_time": "2018-05-01T03:43:48.831118Z",
+     "start_time": "2018-05-01T03:43:48.339475Z"
     },
     "scrolled": false
    },
@@ -676,8 +694,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9622222222222222\n",
-      "variance of acc:0.0006962962962962956\n"
+      "average acc:0.96\n",
+      "variance of acc:0.00037530864197530807\n"
      ]
     }
    ],
@@ -689,8 +707,8 @@
     "    test_X, test_y = test[:, :-1], test[:, -1]\n",
     "    \n",
     "    cov = np.cov(train_X, rowvar=False)\n",
-    "    eigvalue, eigvertor= np.linalg.eig(cov)\n",
-    "    \n",
+    "    eigvalue, eigvertor = np.linalg.eig(cov)\n",
+    "    eigvalue, eigvertor = sort_eig(eigvalue, eigvertor)\n",
     "    V = (eigvertor[:, :2]).dot(np.diag(eigvalue[:2])**0.5)\n",
     "    Vbar = np.linalg.inv(V.T.dot(V)).dot(V.T)\n",
     "    #display(V, Vbar)\n",
@@ -714,11 +732,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:08.479201Z",
-     "start_time": "2018-04-10T04:57:08.472349Z"
+     "end_time": "2018-05-01T03:43:48.839469Z",
+     "start_time": "2018-05-01T03:43:48.833391Z"
     }
    },
    "outputs": [],
@@ -745,17 +763,20 @@
     "    #display(Sw, Sb)\n",
     "    lda_eigvalue, lda_eignvector = np.linalg.eig(\n",
     "                                    np.linalg.inv(Sw).dot(Sb))\n",
+    "    \n",
+    "    lda_eigvalue, lda_eignvector = sort_eig(lda_eigvalue, lda_eignvector)\n",
+    "    \n",
     "    #display(lda_eigvalue.real, lda_eignvector.real)\n",
     "    return lda_eigvalue, lda_eignvector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:08.491104Z",
-     "start_time": "2018-04-10T04:57:08.481747Z"
+     "end_time": "2018-05-01T03:43:48.850799Z",
+     "start_time": "2018-05-01T03:43:48.842009Z"
     }
    },
    "outputs": [
@@ -784,17 +805,18 @@
    "source": [
     "data = iris.as_matrix()\n",
     "lda_eigvalue, lda_eignvector = lda(data)\n",
+    "\n",
     "X, y = data[:, :-1].dot(lda_eignvector[:, :2]), data[:, -1]\n",
     "display(lda_eigvalue.real, lda_eignvector.real)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:08.497061Z",
-     "start_time": "2018-04-10T04:57:08.493416Z"
+     "end_time": "2018-05-01T03:43:48.856639Z",
+     "start_time": "2018-05-01T03:43:48.853254Z"
     }
    },
    "outputs": [],
@@ -809,11 +831,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-10T04:57:09.042421Z",
-     "start_time": "2018-04-10T04:57:08.499709Z"
+     "end_time": "2018-05-01T03:43:49.394963Z",
+     "start_time": "2018-05-01T03:43:48.858820Z"
     }
    },
    "outputs": [
@@ -821,8 +843,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average acc:0.9733333333333334\n",
-      "variance of acc:0.00017777777777777708\n"
+      "average acc:0.9688888888888888\n",
+      "variance of acc:0.0003160493827160487\n"
      ]
     }
    ],
@@ -844,6 +866,13 @@
     "print('average acc:{}'.format(np.mean(acc)))\n",
     "print('variance of acc:{}'.format(np.var(acc)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
